--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             <div class="security-icon">🔒</div>
             <div class="security-title">Verificación de Seguridad</div>
             <div class="security-text">
-                Verificando la autenticidad del enlace y validando el acceso seguro...
+                Verificando la autenticidad del enlace 222222 y validando el acceso seguro...
             </div>
             
             <div class="progress-container">
