--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     <div id="securityModal" class="security-modal">
         <div class="security-content">
             <div class="security-icon">🔒</div>
-            <div class="security-title">Verificación de Seguridad</div>
+            <div class="security-title">Verificación 22222de Seguridad</div>
             <div class="security-text">
                 Verificando la autenticidad del enlace y validando el acceso seguro...
             </div>
